GDB-12477: Fix ACL management view overflow
## What
Set `page-content` class on the main slot of the layout

## Why
Something caused an overflow and a scroll bar to be visible. Added a `page-content` class as it is in the legacy workbench.

## How
- added `page-content` class to main slot in the layout
- set footer height to 30px as it is in the legacy

--- a/packages/shared-components/src/components/onto-footer/onto-footer.scss
+++ b/packages/shared-components/src/components/onto-footer/onto-footer.scss
@@ -3,4 +3,5 @@
 }
 .footer-component {
   padding-left: var(--main-content-rl-padding);
+  height: 1.875rem;
 }
